# eeg-seizure-detection

./: LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/tests/: conftest.py
